@@ -1,3 +1,4 @@
+* Set focus on search entry after search
 * Support language suffix in CSV export
 * Close tab with mouse middle click
 * Support language suffix in CSV import
